--- a/Composition.UI.Samples/MainPage.xaml
+++ b/Composition.UI.Samples/MainPage.xaml
@@ -1,10 +1,8 @@
 ﻿<Page
-    x:Class="Composition.UI.MainPage"
+    x:Class="Composition.UI.Samples.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Composition.UI"
-    xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
-    xmlns:behaviors="using:Composition.UI.Behaviors"
+    xmlns:local="using:Composition.UI.Samples"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
